# basilisk

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  clippy.toml
.cargo/: config.toml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  prompts.rs  runner.rs  tool.rs
crates/agent/src/prompts/: recon_v1.md  recon_v2.md  vuln_v1.md  vuln_v2.md
crates/agent/src/runner/: agent.rs  mod.rs  observer.rs  types.rs
crates/agent/src/session/: error.rs  mod.rs  schema.sql  store.rs  time_serde.rs  types.rs
crates/agent/src/testing/: mod.rs
crates/agent/src/tools/: analyze_project.rs  classify_target.rs  fetch_github_repo.rs  finalize_report.rs  get_storage_slot.rs  grep_project.rs  knowledge_tools.rs  list_directory.rs  mod.rs  read_file.rs  resolve_onchain_contract.rs  resolve_onchain_system.rs  scratchpad_tools.rs  self_critique.rs  static_call.rs  vuln_tools.rs
crates/agent/tests/: agent_live.rs  agent_loop.rs
crates/analyze/: Cargo.toml
crates/analyze/src/: bytecode.rs  callers.rs  error.rs  lib.rs  simulate.rs  state_deps.rs
crates/bench/: Cargo.toml
crates/bench/src/: error.rs  lib.rs  score.rs  store.rs  targets.rs  types.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: agent.rs  agent_runner.rs  bench.rs  cache.rs  doc.rs  knowledge.rs  mod.rs  recon.rs  session.rs
crates/cli/tests/: cli_smoke.rs  knowledge_smoke.rs  scratchpad_smoke.rs  session_smoke.rs
crates/core/: Cargo.toml
crates/core/src/: chain.rs  config.rs  detect.rs  error.rs  lib.rs  target.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: backend.rs  batching.rs  error.rs  factory.rs  lib.rs  openai_compat.rs  pricing.rs  types.rs  voyage.rs
crates/embeddings/tests/: openai_compat_wiremock.rs  voyage_wiremock.rs
crates/exec/: Cargo.toml
crates/exec/src/: anvil.rs  backend.rs  error.rs  forge.rs  lib.rs  mock.rs  registry.rs  rpc_url.rs  types.rs
crates/exec/tests/: live_lifecycle.rs  no_broadcast.rs
crates/explorers/: Cargo.toml
crates/explorers/src/: blockscout.rs  chain.rs  error.rs  etherscan.rs  lib.rs  source_explorer.rs  sourcify.rs  types.rs
crates/git/: Cargo.toml
crates/git/src/: cache.rs  error.rs  fetch.rs  lib.rs  time_serde.rs  types.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: batch.rs  code4rena.rs  code_refs.rs  error.rs  ingester.rs  lib.rs  normalize.rs  openzeppelin.rs  protocol.rs  rekt.rs  sherlock.rs  solodit.rs  state.rs  swc.rs  trailofbits.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: error.rs  finding.rs  knowledge_base.rs  lib.rs  search.rs  stats.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  backend.rs  error.rs  lib.rs  openai_compat.rs  pricing.rs  sse.rs  types.rs
crates/llm/tests/: anthropic_streaming.rs  anthropic_wiremock.rs  openai_compat_wiremock.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/onchain/: Cargo.toml
crates/onchain/src/: constructor.rs  display.rs  enrichment.rs  error.rs  history.rs  ingester.rs  lib.rs  references.rs  resolved.rs  storage_layout.rs  system.rs  time_serde.rs
crates/onchain/src/proxy/: diamond.rs  eip1167.rs  mod.rs  slots.rs  types.rs
crates/project/: Cargo.toml
crates/project/src/: config.rs  error.rs  foundry.rs  graph.rs  hardhat.rs  imports.rs  js_text.rs  layout.rs  lib.rs  resolved.rs  resolver.rs  sources.rs  time_serde.rs  truffle.rs
crates/project/tests/: fixtures.rs
crates/project/tests/fixtures/broken-imports/src/: Good.sol
crates/project/tests/fixtures/foundry-minimal/: foundry.toml
crates/project/tests/fixtures/foundry-minimal/lib/forge-std/src/: Test.sol
crates/project/tests/fixtures/foundry-minimal/lib/openzeppelin/access/: Ownable.sol
crates/project/tests/fixtures/foundry-minimal/src/: Token.sol  Wallet.sol
crates/project/tests/fixtures/foundry-minimal/test/: TokenTest.sol
crates/project/tests/fixtures/hardhat-minimal/: hardhat.config.ts  package.json
crates/project/tests/fixtures/hardhat-minimal/contracts/: Token.sol
crates/project/tests/fixtures/mixed/: hardhat.config.js
crates/project/tests/fixtures/mixed/contracts/: Hardhat.sol
crates/project/tests/fixtures/mixed/src/: Foundry.sol
crates/project/tests/fixtures/no-config/src/: Bare.sol
crates/project/tests/fixtures/truffle-minimal/: truffle-config.js
crates/project/tests/fixtures/truffle-minimal/contracts/: Migrations.sol
crates/rpc/: Cargo.toml
crates/rpc/src/: alloy_impl.rs  chunked.rs  error.rs  lib.rs  memory.rs  provider.rs  resolver.rs  retry.rs  types.rs
crates/scratchpad/: Cargo.toml
crates/scratchpad/src/: error.rs  lib.rs  ops.rs  render.rs  schema.sql  store.rs  types.rs
crates/vector/: Cargo.toml
crates/vector/src/: error.rs  file_store.rs  lib.rs  memory_store.rs  schema.rs  store.rs  types.rs
docs/: agent.md  architecture.md  commands.md  configuration.md  installation.md  knowledge.md  onchain.md  overview.md  source.md  vulns.md
reports/: SET-7.md  SET-8.md  SET-9-5.md  SET-9-6.md  SET-9.md  wave-launcher-trial.md
scripts/: calibrate-vuln.sh  feedback-summary.sh
