[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/eminivince/basilisk"
authors = ["Basilisk Contributors"]

[workspace.dependencies]
# Internal crates
basilisk-core = { path = "crates/core", version = "0.1.0" }
basilisk-logging = { path = "crates/logging", version = "0.1.0" }

# External
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"
hex = "0.4"
regex = "1.11"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
url = "2.5"

# Dev-dependencies
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allows — we'll tighten these as the codebase matures.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unnecessary_wraps = "allow"        # TEMP: remove once handlers have fallible bodies
unused_async = "allow"             # TEMP: remove once handlers await real work
needless_pass_by_value = "allow"   # TEMP: revisit once signatures stabilize

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
