[package]
name = "basilisk-analyze"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Static and dynamic analytical tools for Basilisk's vulnerability reasoning — caller-graph mining, storage-dependency tracing, and forked-state simulation."

[lints]
workspace = true

[dependencies]
basilisk-core.workspace = true
basilisk-exec.workspace = true
basilisk-onchain.workspace = true
basilisk-explorers.workspace = true

alloy-primitives.workspace = true
async-trait.workspace = true
hex.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
basilisk-graph.workspace = true
tempfile.workspace = true
