[package]
name = "basilisk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The `audit` command-line binary for the Basilisk auditor."

[lints]
workspace = true

[[bin]]
name = "audit"
path = "src/main.rs"

[dependencies]
basilisk-cache = { workspace = true }
basilisk-core = { workspace = true }
basilisk-git = { workspace = true }
basilisk-logging = { workspace = true }
basilisk-onchain = { workspace = true }
basilisk-project = { workspace = true }

alloy-primitives = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
