[package]
name = "basilisk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types, configuration, and errors for the Basilisk smart-contract auditor."

[lints]
workspace = true

[dependencies]
config = { workspace = true }
dotenvy = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
