[package]
name = "basilisk-exec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Forked EVM execution backends — anvil-based forks, snapshot/revert, impersonation, and Foundry-test runs."

[lints]
workspace = true

[dependencies]
basilisk-core.workspace = true

alloy-primitives.workspace = true
async-trait.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
which = "6.0"

[dev-dependencies]
tempfile.workspace = true
