[package]
name = "basilisk-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ETL pipelines for Basilisk's knowledge base. Source-specific ingesters layered on a common trait."

[lints]
workspace = true

[dependencies]
basilisk-embeddings = { workspace = true }
basilisk-vector = { workspace = true }

async-trait = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
