[package]
name = "basilisk-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Structured logging setup (tracing + tracing-subscriber) for Basilisk."

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
