[package]
name = "basilisk-onchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "On-chain ingestion: proxy detection and contract resolution."

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
basilisk-core = { workspace = true }
basilisk-explorers = { workspace = true }
basilisk-graph = { workspace = true }
basilisk-rpc = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
