[package]
name = "basilisk-scratchpad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent working-memory substrate — a structured, mutable, persistent scratchpad kept across a session."

[lints]
workspace = true

[dependencies]
basilisk-core = { workspace = true }

rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
